# krx-kind-data-api

./: .gitignore  README.md  pyproject.toml
docs/: KIND_데이터_프로젝트_정리.md  공시본문_iframe_URL_엔드포인트_핸드오프.md  상장종목현황_listed_issue_status.md  새_엔드포인트_추가하기.md
krx_kind_data_api/: __init__.py  client.py  endpoints.py  exceptions.py  mcp_server.py  parsers.py  selenium_viewer.py  transport.py
selenium/: KIND_Selenium_프로젝트_정리.md
tests/: test_endpoints_live.py  test_mcp_server.py
