[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "krx-kind-data-api"
version = "0.1.0"
description = "KRX 상장공시시스템(kind.krx.co.kr) 호출 클라이언트 — .do 화면 POST/GET + HTML 파싱"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pandas",
    "beautifulsoup4",
    "lxml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["krx_kind_data_api*"]
